[gd_scene load_steps=5 format=3 uid="uid://cexdtg55jpbmp"]

[ext_resource type="Script" uid="uid://cvoryiwwm5k2t" path="res://assets/scripts/characters/enemies/spawners/bullet.gd" id="1_rcpd2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rcpd2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rcpd2"]
albedo_color = Color(0.241156, 0.241156, 0.241156, 1)

[sub_resource type="SphereMesh" id="SphereMesh_rcpd2"]

[node name="Bullet" type="Area3D"]
script = ExtResource("1_rcpd2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.33, 0, 0, 0, -1.44248e-08, -0.33, 0, 0.33, -1.44248e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_rcpd2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.7, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_rcpd2")
mesh = SubResource("SphereMesh_rcpd2")

[node name="LifeTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
